# simple-conversation-ai-agent

./: README.md  pyproject.toml
simple_conversation_agent/: main.py
simple_conversation_agent/agent/: ai_agent.py
simple_conversation_agent/cli/chat/: interface.py
simple_conversation_agent/cli/config/: interface.py
simple_conversation_agent/cli/history/: interface.py
simple_conversation_agent/configuration/: conf_service.py  models.py
simple_conversation_agent/history/: session_history.py
